<?xml version="1.0"?>
<package>
  <name>jetbot</name>
  <version>1.0.0</version>
  <description>The jetbot package</description>

  <maintainer email="mobangjack@foxmail.com">bj</maintainer>

  <license>Apache 2.0</license>

  <url type="website">http://www.whukylin.com</url>

  <author email="mobangjack@foxmail.com">Jack Mo</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
